<resources>
    <string name="app_name">inNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    //-&#45;&#45;&#45;&#45;FACEBOOK-->

    <string name="facebook_application_id" translatable="false">824246508733162</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="fb_login_protocol_scheme" translatable="false">fb824246508733162</string>
    <!--    <string name="facebook_app_id">824246508733162</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb824246508733162</string>-->
    <string name="facebook_client_token">f9735a4ac05d84fa6695742c336f17ad</string>

    <string name="listaArquivos"><u>Visualizar a listagem de arquivos salvos</u></string>
    <string name="t_tulo">Título</string>
    <string name="latitude">Latitude:</string>
    <string name="textview">TextView</string>
    <string name="texto">Texto:</string>
    <string name="data">Data:</string>
    <string name="longitude">Longitude:</string>
    <string name="anota_o_salva_com_sucesso_confira_abaixo">Anotação salva com sucesso. Confira abaixo!</string>
    <string name="salvar_anota_o">Salvar anotação</string>
    <string name="icone_camera">icone camera</string>
    <string name="localiza_o">Localização:</string>
    <string name="imagem">Imagem</string>
    <string name="insira_o_t_tulo_da_anota_o">Insira o título da anotação</string>
    <string name="insira_a_sua_anota_o">Insira a sua anotação</string>
    <string name="usu_rio">Usuário:</string>
    <string name="icone_imagem">icone imagem</string>
    <string name="icone_de_imagem">Icone de imagem</string>
    <string name="insira_a_palavra_que_voc_deseja_pesquisar">Insira a palavra que você deseja pesquisar...</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="novo_t_tulo">Novo Título</string>
    <string name="insira_o_novo_t_tulo_da_anota_o">Insira o novo título da anotação</string>
    <string name="novo_texto">Novo Texto:</string>
    <string name="insira_a_nova_anota_o">Insira a nova anotação</string>
    <string name="icone_salvar">Icone salvar</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login_pelo_facebook">Login pelo Facebook</string>
    <string name="logo_da_aplica_o">Logo da aplicação</string>
    <string name="ok">OK</string>
    <string name="inserir_anota_o">Inserir Anotação</string>
    <string name="visualizar_anota_es">Visualizar anotações</string>
    <string name="ferramentas_de_estudo">Ferramentas de estudo</string>
    <string name="consulta_bibliogr_fica">Consulta Bibliográfica</string>
    <string name="dicion_rio">Dicionário</string>
    <string name="icone_deletar">icone deletar</string>
    <string name="icone_editar">icone editar</string>
    <string name="icone_alerta_imagem">icone alerta imagem</string>
    <string name="sair">Sair</string>
    <string name="anota_es_de_estudo">Anotações de estudo:</string>
    <string name="vers_o_premium">Versão premium</string>
    <string name="ltimo_login">Último login:</string>
    <string name="tvultimologin">tvUltimoLogin</string>
    <string name="tvusuario">tvUsuario</string>


</resources>