<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.EditFragment">

    <TextView
        android:id="@+id/tvNovoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/novo_t_tulo"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etNovoTitulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/retangulo"
        android:backgroundTint="#81DAE1E0"
        android:hint="@string/insira_o_novo_t_tulo_da_anota_o"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvNovoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/novo_texto"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etNovoTexto"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:autofillHints=""
        android:backgroundTint="#81DAE1E0"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/insira_a_nova_anota_o"
        android:inputType="textMultiLine"
        android:padding="10dp"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/ibSalvar"
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/icone_salvar"
        android:scaleType="fitStart"
        android:src="@android:drawable/ic_menu_save"
        tools:ignore="ImageContrastCheck" />


</LinearLayout>